2010-07-16  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* imported and partially adapted code from
	http://mf-sd.de/wp-content/plugins/download-monitor/download.php?id=sogo-connector-0.100-mf.xpi

2010-07-01  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* chrome/content/sogo-connector/general/vcards.utils.js
	We not only consider the "PREF" parameter when setting
	the primary email but also the "WORK" value.
	* chrome/content/sogo-connector/general/vcards.utils.js
	in the adr function, we correctly consider the "extended"
	address attribute by using index 1 and not 0
	* chrome/content/sogo-connector/general/vcards.utils.js
	in the tel function, we now overwrite the fax number only
	if it's a WORK fax or if the value isn't already set
	* chrome/content/sogo-connector/general/vcards.utils.js
	in the card2vcard function, we correctly set the pobox
	attribute (to none) instead of setting the street address
	geographical attribute to none

2010-06-16  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/general/vcards.utils.js:
	(_insertCardMethods.tel): we must treat the types
	case-insensitively, as is done with the other similar elements.

2010-06-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/inverse-library/sogoWebDAV.js: added the
	"OPTIONS" operation.

2010-05-28  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/inverse-library/sogoWebDAV.js:
	(onXMLRequestReadyStateChange) we now attempt to deduce the
	content length from the response text when the "content-length"
	header is not present. This enables us to support the "chunked"
	transfer encoding.

2010-05-11  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* components/componentRegistry.js: disbabled
	""@inverse.ca/calendar/fburl-freebusy-provider;1" as it seems to
	cause a problem in certain configurations.

2010-04-20  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/general/vcards.utils.js